--- a/renovate.json
+++ b/renovate.json
@@ -1,34 +1,18 @@
 {
-	"extends": ["config:base"],
-	"prHourlyLimit": 0,
-	"prConcurrentLimit": 8,
-	"separateMinorPatch": true,
+	"extends": ["config:base",":rebaseStalePrs"],
+	"prHourlyLimit": 2,
+	"prConcurrentLimit": 4,
 	"addLabels": ["renovate"],
 	"packageRules": [
 		{
-			"updateTypes": ["major"],
-			"addLabels": ["major", "auto-merge"],
-			"automerge": true
+			"matchUpdateTypes": ["major"],
+			"labels": ["UPDATE-MAJOR"]
 		},
 		{
-			"updateTypes": ["security"],
-			"addLabels": ["security", "auto-merge"],
-			"automerge": true
-		},
-		{
-			"updateTypes": ["minor"],
-			"addLabels": ["minor", "auto-merge"],
-			"automerge": true
-		},
-		{
-			"updateTypes": ["patch", "digest", "bump"],
-			"addLabels": ["patch", "auto-merge"],
-			"automerge": true
-		},
-		{
-			"updateTypes": ["pin"],
-			"addLabels": ["📌", "auto-merge"],
-			"automerge": true
+			"description": "Automatically merge minor and patch-level updates",
+			"matchUpdateTypes": ["minor", "patch", "digest"],
+			"automerge": true,
+			"automergeType": "branch"
 		}
 	],
 	"lockFileMaintenance": {
