--- a/renovate.json
+++ b/renovate.json
@@ -4,7 +4,7 @@
   "lockFileMaintenance": { "enabled": true },
   "dependencyDashboard": true,
   "dependencyDashboardAutoclose": true,
-  "schedule": ["at any time"],
+  "schedule": ["every weekend"],
   "major": {
     "dependencyDashboardApproval": true
   },
