--- a/renovate.json
+++ b/renovate.json
@@ -1,7 +1,8 @@
 {
   "extends": [
     "config:base",
-    ":rebaseStalePrs"
+    ":rebaseStalePrs",
+    "schedule:nonOfficeHours"
   ],
   "addLabels": [
     "renovate"
