add @openai: ignore to renovate pull request body

--- a/renovate.json
+++ b/renovate.json
@@ -35,6 +35,7 @@
     "enabled": false,
     "additionalBranchPrefix": "docker-"
   },
+  "prBodyNotes": ["@openai: ignore"],
   "packageRules": [
     {
       "matchConfidence": "high",
