--- a/renovate.json
+++ b/renovate.json
@@ -7,6 +7,7 @@
   ],
   "timezone": "UTC",
   "prCreation": "not-pending",
+  "prBodyNotes": ["@openai: ignore"],
   "stabilityDays": 7,
   "rangeStrategy": "bump",
   "semanticCommits": true,
